--- a/HomePage.html
+++ b/HomePage.html
@@ -11,7 +11,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">How Can I Help</a></li>
             </ul> 
-            <button class="button"><a class="lg" href="login.html">Login</a></button>
+            <button class="button"><a /image/foodBag.jpegclass="lg" href="login.html">Login</a></button>
         </div>
         <input class="search-bar" type="text" placeholder="Search">
         <h1 class="main-text">Donate Food Here</h1>
